# waxum

./: .dockerignore  .env.example  .gitignore  .kimi-review.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  add-security.js  askama.toml  docker-compose.build.yml  docker-compose.postgres.yml  docker-compose.yml
.github/: issue-context.md  review-context.md
.github/workflows/: ci.yml  kimi-review.yml  release.yml  rustdoc.yml  waxum-issue.yml  waxum-review.yml
data/: sessions.json
scripts/: install.ps1  install.sh
src/: device_props.rs  error.rs  lib.rs  main.rs  metrics.rs  net.rs  preflight.rs  state.rs  storage.rs
src/console/: handlers.rs  mod.rs
src/console/assets/: console.css  playground.js
src/console/templates/: drawer.hbs  layout.hbs  login.hbs  overview.hbs  overview_body.hbs  session.hbs
src/db/: blast.rs  contacts.rs  messages.rs  mod.rs  scheduled.rs  schema.rs  session.rs  sqlite_raw.rs  webhook_dlq.rs
src/handlers/: auth.rs  blast.rs  blocking.rs  bulk.rs  calls.rs  chatstate.rs  contacts.rs  dashboard.rs  events.rs  fake_reply.rs  groups.rs  groups_management.rs  info.rs  media.rs  messages.rs  mex.rs  mod.rs  nats_handler.rs  operations.rs  presence.rs  privacy.rs  schedule.rs  search.rs  sessions.rs  status.rs  tags.rs  webhooks.rs
src/middleware/: jwt.rs
src/models/: auth.rs  blast.rs  blocking.rs  bulk.rs  calls.rs  chatstate.rs  common.rs  contacts.rs  groups.rs  media.rs  messages.rs  mex.rs  mod.rs  presence.rs  privacy.rs  schedule.rs  search.rs  sessions.rs  status.rs  webhooks.rs
src/nats/: config.rs  consumer.rs  mod.rs  models.rs  publisher.rs
src/routes/: mod.rs
templates/: base.askama  base.html  dashboard.askama  dashboard.html  login.askama  session_detail.askama  session_detail.html  session_new.askama  session_new.html  sessions.askama  sessions.html  settings.askama  settings.html
tests/: auth.rs  blast.rs  fts_probe.rs  health.rs  info.rs  scheduled.rs  search.rs  sessions.rs  webhooks.rs
tests/common/: mod.rs
