[package]
name = "wa-rs"
version = "0.6.18"
edition = "2021"
authors = ["taqin"]
license = "MIT"
description = "REST API gateway for WhatsApp-Rust client"
repository = "https://github.com/fdciabdul/wa-rs"

[dependencies]

rand = "0.8"
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d", default-features = true, features = ["voip"] }
wacore = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }
wacore-binary = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }
waproto = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }
whatsapp-rust-sqlite-storage = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }
whatsapp-rust-tokio-transport = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "f95eb2d" }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database (multi-backend: PostgreSQL, MySQL, SQLite)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
mysql_async = { version = "0.35", default-features = false, features = ["default-rustls"] }
# SQLite — used as the zero-config fallback when DATABASE_URL is unset so
# `cargo run` "just works" against a local file (./wa-rs.db) without needing
# Postgres or MySQL running.
libsqlite3-sys = { version = "0.37", features = [] }

# Environment
dotenvy = "0.15"

# Utilities
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls"] }

# Crypto for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# JWT authentication
jsonwebtoken = "9"

# NATS JetStream
async-nats = "0.38"
bytes = "1"
futures = "0.3"

prometheus = { version = "0.13", default-features = false }
async-channel = "2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
